--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "youtube-client",
-	"version": "1.1.1",
+	"version": "v1.1.1",
 	"description": "YoutubeTV for PC",
 	"main": "index.js",
 	"scripts": {
