--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "youtube-client",
+	"name": "youtube TV-client",
 	"version": "v1.1.1",
 	"description": "YoutubeTV for PC",
 	"main": "index.js",
