--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: UnitTest report
-          path: build/reports/tests/test
+          name: YoutubeTV
+          path: dist/
