--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  push:
-    tags:
-    # "v" で始まる Tag 名の push だけをトリガーの対象にします (e.g., "v0.0.2")
-    - '*'
+on: push
 
 jobs:
   # macOS 用の job 定義
