--- a/builder-effective-config-mac.yaml
+++ b/builder-effective-config-mac.yaml
@@ -1,7 +1,7 @@
 directories:
   output: "dist"
   buildResources: "build"
-appId: "com.twitterdev.tools.TwitterAds.Analytics.Debugger"
+appId: "com.amania.youtubetv"
 mac:
   target: "dmg"
 artifactName: "${name}-${version}-${os}.${ext}"
